--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ quarkus.langchain4j.redis.dimension=384
 
 quarkus.langchain4j.openai.api-key=demo
 quarkus.langchain4j.openai.base-url=http://langchain4j.dev/demo/openai/v1
+
+rag.verify=false
+rag.anonymize=false
