fixes docling version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@ quarkus.langchain4j.redis.dimension=384
 quarkus.langchain4j.openai.api-key=demo
 quarkus.langchain4j.openai.base-url=http://langchain4j.dev/demo/openai/v1
 
+quarkus.docling.devservices.image-name=quay.io/docling-project/docling-serve:v0.16.1
+
 rag.verify=false
-rag.anonymize=false
+rag.anonymize=true
