--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ quarkus.langchain4j.openai.base-url=http://langchain4j.dev/demo/openai/v1
 quarkus.docling.devservices.image-name=quay.io/docling-project/docling-serve:v0.16.1
 
 rag.verify=false
-rag.anonymize=true
+rag.anonymize=false
